--- a/src/app/pages/page.component.html
+++ b/src/app/pages/page.component.html
@@ -30,9 +30,9 @@
 
   <div class="main-content" fxFlex>
 
-    <div class="content-body" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="10px">
+    <div class="content-body" fxLayout="row wrap" fxLayout.xs="column" >
       <div fxFlex="15% "></div>
-      <div fxFlex="75% ">
+      <div fxFlex="85% ">
         <router-outlet></router-outlet>
       </div>
 
