--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -3,6 +3,11 @@
     <mat-icon>supervisor_account</mat-icon>&nbsp;Users
   </div>
   <div>
-
+    <app-main-data-table></app-main-data-table>
+  </div>
+  <div style="position: fixed;margin-left: 80%!important;bottom: 80px!important;">
+    <button mat-fab color="primary" (click)="addItem()">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
 </div>
