--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <mat-card class="example-card" style="min-height: 200px">
           <mat-card-header>
 
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-title>Title</mat-card-title>
 
           </mat-card-header>
 
@@ -22,7 +22,7 @@
         <mat-card class="example-card" style="min-height: 200px">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-title>Title</mat-card-title>
           </mat-card-header>
 
           <mat-card-content>
@@ -34,7 +34,7 @@
         <mat-card class="example-card" style="min-height: 200px">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-title>Title</mat-card-title>
 
           </mat-card-header>
 
@@ -47,7 +47,7 @@
         <mat-card class="example-card" style="min-height: 200px">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-title>Title</mat-card-title>
 
           </mat-card-header>
 
@@ -60,7 +60,7 @@
         <mat-card class="example-card" style="min-height: 200px">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-title>Title</mat-card-title>
 
           </mat-card-header>
 
