--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="3" rowHeight="100px" style="margin-top: 100px">
+<mat-grid-list cols="3" rowHeight="700px">
   <mat-grid-tile
     [colspan]="1"
     [rowspan]="1">
@@ -6,23 +6,66 @@
   <mat-grid-tile
     [colspan]="1"
     [rowspan]="1">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      </mat-card-header>
-       <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
+    <mat-card>
+      <mat-card-content>
+        <div>
+          <form>
+            <div class="formFieldWidth400">
+              <div style="text-align: center"><h2>Invoice Management System</h2></div>
+              <br/>
+              <div>
+                <mat-form-field>
+                  <mat-label floatLabel="auto">Username</mat-label>
+                  <mat-icon matPrefix>person_outline</mat-icon>
+                  <input
+                    matInput
+                    type="text"
+                    [(ngModel)]="user.username"
+                    name="username"
+                    placeholder="Username">
+                </mat-form-field>
+              </div>
+
+              <div>
+                <mat-form-field>
+                  <mat-label floatLabel="auto">Password</mat-label>
+                  <mat-icon matPrefix>lock_open</mat-icon>
+                  <input
+                    matInput
+                    type="password"
+                    [(ngModel)]="user.password"
+                    name="password"
+                    placeholder="Password">
+                </mat-form-field>
+              </div>
+            </div>
+
+            <button type="button" mat-raised-button
+                    class="btn-block" (click)="login()" color="primary">Login
+            </button>
+
+            <div>
+            </div>
+          </form>
+
+          <div *ngIf="$isLoggingIn|async">
+            <br/>
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+          </div>
+          <div *ngIf="$loginSuccess|async">
+            <div class="success">
+              login successfully
+            </div>
+            <br/>
+          </div>
+          <div *ngIf="$loginFailure|async">
+            <div class="failure">
+              login failed
+            </div>
+          </div>
+
+        </div>
       </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
   <mat-grid-tile
