--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,3 +98,7 @@ select:focus {
 .formFieldWidth400 .mat-form-field-infix {
   width: 400px;
 }
+
+.selected-list .c-btn{
+  width: 88%!important;
+}
